# dava.engine.framework

./: .gitattributes  .gitignore  README  build_tools.py
Libs/: .gitignore  (+4 more)
Libs/bullet/: Bullet-C-Api.h  CMakeLists.txt  btBulletCollisionCommon.h  btBulletDynamicsCommon.h
Libs/bullet/BulletCollision/BroadphaseCollision/: btAxisSweep3.cpp  btAxisSweep3.h  btBroadphaseInterface.h  btBroadphaseProxy.cpp  btBroadphaseProxy.h  btCollisionAlgorithm.cpp  btCollisionAlgorithm.h  btDbvt.cpp  btDbvt.h  btDbvtBroadphase.cpp  btDbvtBroadphase.h  btDispatcher.cpp  btDispatcher.h  btMultiSapBroadphase.cpp  btMultiSapBroadphase.h  btOverlappingPairCache.cpp  btOverlappingPairCache.h  btOverlappingPairCallback.h  btQuantizedBvh.cpp  btQuantizedBvh.h  btSimpleBroadphase.cpp  btSimpleBroadphase.h
Libs/bullet/BulletCollision/CollisionDispatch/: SphereTriangleDetector.cpp  SphereTriangleDetector.h  btActivatingCollisionAlgorithm.cpp  btActivatingCollisionAlgorithm.h  btBoxBoxCollisionAlgorithm.cpp  btBoxBoxCollisionAlgorithm.h  btBoxBoxDetector.cpp  btBoxBoxDetector.h  btCollisionConfiguration.h  btCollisionCreateFunc.h  btCollisionDispatcher.cpp  btCollisionDispatcher.h  btCollisionObject.cpp  btCollisionObject.h  btCollisionWorld.cpp  btCollisionWorld.h  btCompoundCollisionAlgorithm.cpp  btCompoundCollisionAlgorithm.h  btConvex2dConvex2dAlgorithm.cpp  btConvex2dConvex2dAlgorithm.h  btConvexConcaveCollisionAlgorithm.cpp  btConvexConcaveCollisionAlgorithm.h  btConvexConvexAlgorithm.cpp  btConvexConvexAlgorithm.h  btConvexPlaneCollisionAlgorithm.cpp  btConvexPlaneCollisionAlgorithm.h  btDefaultCollisionConfiguration.cpp  btDefaultCollisionConfiguration.h  btEmptyCollisionAlgorithm.cpp  btEmptyCollisionAlgorithm.h  btGhostObject.cpp  btGhostObject.h  btInternalEdgeUtility.cpp  btInternalEdgeUtility.h  btManifoldResult.cpp  btManifoldResult.h  btSimulationIslandManager.cpp  btSimulationIslandManager.h  btSphereBoxCollisionAlgorithm.cpp  btSphereBoxCollisionAlgorithm.h  (+6 more)
Libs/bullet/BulletCollision/CollisionShapes/: btBoxShape.cpp  btBoxShape.h  btBvhTriangleMeshShape.cpp  btBvhTriangleMeshShape.h  btCapsuleShape.cpp  btCapsuleShape.h  btCollisionMargin.h  btCollisionShape.cpp  btCollisionShape.h  btCompoundShape.cpp  btCompoundShape.h  btConcaveShape.cpp  btConcaveShape.h  btConeShape.cpp  btConeShape.h  btConvex2dShape.cpp  btConvex2dShape.h  btConvexHullShape.cpp  btConvexHullShape.h  btConvexInternalShape.cpp  btConvexInternalShape.h  btConvexPointCloudShape.cpp  btConvexPointCloudShape.h  btConvexPolyhedron.cpp  btConvexPolyhedron.h  btConvexShape.cpp  btConvexShape.h  btConvexTriangleMeshShape.cpp  btConvexTriangleMeshShape.h  btCylinderShape.cpp  btCylinderShape.h  btEmptyShape.cpp  btEmptyShape.h  btHeightfieldTerrainShape.cpp  btHeightfieldTerrainShape.h  btMaterial.h  btMinkowskiSumShape.cpp  btMinkowskiSumShape.h  btMultiSphereShape.cpp  btMultiSphereShape.h  (+34 more)
Libs/bullet/BulletCollision/Gimpact/: btBoxCollision.h  btClipPolygon.h  btContactProcessing.cpp  btContactProcessing.h  btGImpactBvh.cpp  btGImpactBvh.h  btGImpactCollisionAlgorithm.cpp  btGImpactCollisionAlgorithm.h  btGImpactMassUtil.h  btGImpactQuantizedBvh.cpp  btGImpactQuantizedBvh.h  btGImpactShape.cpp  btGImpactShape.h  btGenericPoolAllocator.cpp  btGenericPoolAllocator.h  btGeometryOperations.h  btQuantization.h  btTriangleShapeEx.cpp  btTriangleShapeEx.h  gim_array.h  gim_basic_geometry_operations.h  gim_bitset.h  gim_box_collision.h  gim_box_set.cpp  gim_box_set.h  gim_clip_polygon.h  gim_contact.cpp  gim_contact.h  gim_geom_types.h  gim_geometry.h  gim_hash_table.h  gim_linear_math.h  gim_math.h  gim_memory.cpp  gim_memory.h  gim_radixsort.h  gim_tri_collision.cpp  gim_tri_collision.h
Libs/bullet/LinearMath/: btAabbUtil2.h  btAlignedAllocator.cpp  btAlignedAllocator.h  btAlignedObjectArray.h  btConvexHull.cpp  btConvexHull.h  btConvexHullComputer.cpp  btConvexHullComputer.h  btDefaultMotionState.h  btGeometryUtil.cpp  btGeometryUtil.h  btGrahamScan2dConvexHull.h  btHashMap.h  btIDebugDraw.h  btList.h  btMatrix3x3.h  btMinMax.h  btMotionState.h  btPoolAllocator.h  btQuadWord.h  btQuaternion.h  btQuickprof.cpp  btQuickprof.h  btRandom.h  btScalar.h  btSerializer.cpp  btSerializer.h  btStackAlloc.h  btTransform.h  btTransformUtil.h  btVector3.h  neon_assembly_prototypes.h
Libs/bullet/vectormath/: vmInclude.h
Libs/mongodb/: CMakeLists.txt
Libs/mongodb/src/: bson.c  encoding.c  env.h  env_posix.c  env_standard.c  env_win32.c  gridfs.c  md5.h  mongo.c
Libs/sqlite3/: CMakeLists.txt
Modules/CEFWebview/CEFHelperProcess/: CMakeLists.txt  build.bat  main.cpp
Modules/TArc/: CMakeLists.txt
(+2411 files in other folders)
